# pdm-template-pyhat

./: .editorconfig  .prettierrc.json  README.md  pyproject.toml  tailwind.config.js
app/: config.py  main.py  routes.py
app/static/css/: main.css
app/templates/: main.html
app/templates/shared/: _base.html  _footer.html  _header.html
