[project]
name = "pdm-template-pyhat"
version = "0.1.0"
description = "Opinionated PDM Template for pyhat applications with fastapi"
authors = [{ name = "Pablo Palazon", email = "pablo.palazon@gmail.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.3",
    "pytailwindcss>=0.2.0",
    "pydantic-settings>=2.2.1",
    "jinja2-fragments>=1.3.0",
    "python-multipart>=0.0.9",
    "debugpy>=1.8.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
docs = "mkdocs serve"
start = "uvicorn app.main:app --reload --reload-include *.html --log-level=debug"
tailwind = "tailwindcss -i app/tailwind/tw.css -o app/static/css/main.css --watch"
debug = "python -m debugpy --listen 5678 --wait-for-client -m uvicorn app.main:app"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.14",
]
